Organized buttons better, fixed some button-related bugs.
Put the buttons on the side panel. Button's no longer move out of view
(underneath the map) in small screens but probably wrap when neccesary.
2 buttons on 1 line will grow to fill the panel.

--- a/skirmish.css
+++ b/skirmish.css
@@ -17,15 +17,38 @@ body {
 #map {
     height:120vh;
     width: 93vw;
+#SpawnButtons {
+    width: 100%;
     position: absolute;
     right: 0%;
-}
-#ActivateDarkMode {
-    position: absolute;
+    display: flex;
+    flex-flow: row wrap;
 }
 
-#ActivateLightMode {
-    position: absolute;
+#SpawnRedButton {
+    display: inline;
+    width: 50%;
+    min-width: 57px;
+    order:1;
+    /*flex-grow:1;*/
+}
+
+#SpawnBlueButton {
+    display: inline;
+    width: 50%;
+    min-width: 57px;
+    order:2;
+    /*flex-grow:1;*/
+}
+
+#DarkModeButton {
+    width: 51%;
+    min-width: 80px;
+}
+
+#LightModeButton {
+    width: 51%;
+    min-width: 80px;
     display: none;
 }
 
